Move many dependencies out of node_modules
Need to track dependencies as accurately as possible. Reasons:

- npm packages could be changed when I least expect it and cause trouble or
  security issues

- need to be able to make small edits on the depending packages, especially the themes

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,31 +13,28 @@
     <title>Rotkelchen</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../node_modules/startbootstrap-sb-admin-2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="../node_modules/startbootstrap-sb-admin-2/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="css/metisMenu.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../node_modules/startbootstrap-sb-admin-2/dist/css/sb-admin-2.css" rel="stylesheet">
-
-    <!-- Morris Charts CSS -->
-    <link href="../node_modules/startbootstrap-sb-admin-2/vendor/morrisjs/morris.css" rel="stylesheet">
+    <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
     <!-- Custom Fonts of the Bootstrap template -->
-    <link href="../node_modules/startbootstrap-sb-admin-2/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Data tables css -->
     <link href="../node_modules/datatables.net-dt/css/jquery.dataTables.css" rel="stylesheet" type="text/css">
 
 	<!-- Jquery ui date picker css -->
-	<link href="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css" rel="stylesheet" type="text/css">
+	<link href="css/jquery.datetimepicker.min.css" rel="stylesheet" type="text/css">
 
 	<!-- context menu css -->
-	<link href="jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
+	<link href="css/jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
 
 	<!-- Our own custom CSS -->
-    <link href="rotkelchen.css" rel="stylesheet" type="text/css">
+    <link href="css/rotkelchen.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -156,17 +153,17 @@
 	</script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../node_modules/startbootstrap-sb-admin-2/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="depending_js/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="../node_modules/startbootstrap-sb-admin-2/vendor/metisMenu/metisMenu.min.js"></script>
+    <script src="depending_js/metisMenu.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="../node_modules/startbootstrap-sb-admin-2/dist/js/sb-admin-2.js"></script>
+    <script src="depending_js/sb-admin-2.js"></script>
 	<!-- jquery for Datepicker -->
-	<script src="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.js"></script>
+	<script src="depending_js/jquery.datetimepicker.full.min.js"></script>
 	<!-- jquery for context menu -->
-	<script src="jquery.contextMenu.min.js"></script>
+	<script src="depending_js/jquery.contextMenu.min.js"></script>
 	<script>
 	require('./renderer.js')
 	</script>
